--- a/WatchOS/packages.config
+++ b/WatchOS/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Imgur.API" version="3.7.0-beta3" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net452" />
 </packages>
